[package]
name = "r-lanscan"
version = "0.1.0"
edition = "2021"

[lib]
name = "r_lanscan"
path = "src/lib/lib.rs"

[features]
default = []
debug_logs = []

[[bin]]
name = "r-lanscan"
path = "src/bin/r-lanscan.rs"

[[bin]]
name = "r-lanops"
path = "src/bin/r-lanops.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "^4.4", features = ["derive"] }
ipnet = "^2.9"
log = "^0.4"
paris = { version = "^1.5", features = ["timestamps"] }
simplelog = { version = "^0.12", features = ["paris"] }
pnet = "^0.35"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
prettytable-rs = "^0.10"
oui-data = "^0.2"
dns-lookup = "^2.0"
ratatui = "0.28.0"
color-eyre = "0.6.3"
strum = "0.26.3"
itertools = "0.13.0"
unicode-width = "0.1.13"
