[workspace]
resolver = "2"
members = ["cli", "lib", "term"]
package.repository = "https://github.com/robgonnella/r-lanscan"
package.homepage = "https://github.com/robgonnella/r-lanscan"
package.license  = "GPL-3.0-or-later"
package.keywords = ["network", "network-scanner", "network-scanning", "ARP", "SYN"]
package.edition = "2024"
