[workspace]
resolver = "2"
members = ["cli", "lib", "term"]

[workspace.package]
repository = "https://github.com/robgonnella/r-lanscan"
homepage = "https://github.com/robgonnella/r-lanscan"
license  = "MIT OR Apache-2.0"
keywords = ["network-scanner", "port-scanner", "packet", "ARP", "SYN"]
edition = "2024"
