[package]
name = "r-lancli"
version = "0.1.2"
categories = ["command-line-utilities", "network-programming"]
description = "A command-line interface for performing network scanning operations on local area networks (LANs)"
readme = "README.md"
documentation = "https://docs.rs/r-lancli"
repository.workspace = true
homepage.workspace = true
license.workspace = true
keywords.workspace = true
edition.workspace = true

[dependencies]
clap = { version = "^4.5", features = ["derive"] }
pnet = "^0.35"
itertools = "0.14.0"
prettytable-rs = "^0.10"
color-eyre = "0.6.3"
log = "^0.4"
paris = { version = "^1.5", features = ["timestamps"] }
simplelog = { version = "^0.12", features = ["paris"] }
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
r-lanlib = { path = "../lib", version = "0.1.2" }

[dev-dependencies]
mockall = "0.13.1"
