[package]
name = "r-lanlib"
version = "0.9.0"
description = "A library crate for performing network scanning operations on any local area network (LAN)"
categories = ["network-programming"]
readme = "README.md"
documentation = "https://docs.rs/r-lanlib"
repository.workspace = true
homepage.workspace = true
license.workspace = true
keywords.workspace = true
edition.workspace = true

[package.metadata.cargo-machete]
ignored = ["openssl"]

[[example]]
name = "arp-scanner"
path = "examples/arp-scanner.rs"

[[example]]
name = "syn-scanner"
path = "examples/syn-scanner.rs"

[[example]]
name = "full-scanner"
path = "examples/full-scanner.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ipnet = "^2.11"
log = "^0.4"
serde = { version = "^1.0", features = ["derive"] }
pnet = "^0.35"
oui-data = "^0.2"
dns-lookup = "^3.0"
openssl = { version = "0.10.75", features = ["vendored"] }
thiserror = "2.0.18"
threadpool = "1.8.1"
itertools = "0.14.0"
derive_builder = "0.20.2"

[dev-dependencies]
mockall = "^0.14.0"
