[package]
name = "r-lanui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "^4.4", features = ["derive"] }
pnet = "^0.35"
log = "^0.4"
directories = "5.0"
paris = { version = "^1.5", features = ["timestamps"] }
simplelog = { version = "^0.12", features = ["paris"] }
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
serde_yaml = "0.9.34"
ratatui = "0.28.0"
color-eyre = "0.6.3"
strum = "0.26.3"
itertools = "0.13.0"
unicode-width = "0.1.13"
r-lanlib = { path = "../r-lanlib", version = "0.1.0" }
fakeit = "1.3.0"
