[package]
name = "r-lanui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "^4.5", features = ["derive"] }
pnet = "^0.35"
log = "^0.4"
directories = "6.0"
paris = { version = "^1.5", features = ["timestamps"] }
simplelog = { version = "^0.12", features = ["paris"] }
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
serde_yaml = "0.9.34"
ratatui = { version = "0.29.0", features = ["unstable-widget-ref"] }
color-eyre = "0.6.3"
strum = "0.27.1"
itertools = "0.14.0"
unicode-width = "0.2.0"
r-lanlib = { path = "../r-lanlib", version = "0.1.0" }
fakeit = "1.3.0"
ctrlc = "3.4.6"
supports-color = "3.0.2"
