[package]
name = "r-lanterm"
version = "0.4.0"
description = "A full-featured terminal user interface (TUI) application for managing and interacting with networked LAN devices"
categories = ["command-line-utilities", "network-programming"]
readme = "README.md"
documentation = "https://docs.rs/r-lanterm"
repository.workspace = true
homepage.workspace = true
license.workspace = true
keywords.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "^4.5", features = ["derive"] }
pnet = "^0.35"
log = "^0.4"
directories = "6.0"
nix = { version = "0.30", features = ["user"] }
simplelog = { version = "^0.12", features = ["paris"] }
serde = { version = "^1.0", features = ["derive"] }
serde_yaml = "0.9.34"
ratatui = { version = "0.29.0", features = ["unstable-widget-ref"] }
color-eyre = "0.6.3"
itertools = "0.14.0"
unicode-width = "0.2.0"
r-lanlib = { path = "../lib", version = "0.4.0" }
fakeit = "1.3.0"
ctrlc = "3.4.6"
supports-color = "3.0.2"
signal-hook = "0.3.18"
whoami = "2.0.2"
dirs = "6.0.0"
derive_builder = "0.20.2"

[dev-dependencies]
insta = "1.43.1"
mockall = "0.13.1"
nanoid = "0.4.0"
tempfile = "3.20.0"
